# security-scan

./: .gitignore  .securityscan.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test_scan.py
securityscan/: __init__.py  core.py  models.py
securityscan/cli/: __init__.py  main.py
securityscan/reporters/: __init__.py  html.py  json.py  markdown.py  sarif.py  terminal.py
securityscan/scanners/: __init__.py  authentication_scanner.py  base.py  code_injection_scanner.py  configuration_scanner.py  cryptography_scanner.py  dependency_scanner.py  framework_scanner.py  secrets_scanner.py  sql_injection_scanner.py  xss_scanner.py
securityscan/utils/: __init__.py  config.py  file_discovery.py  progress.py
test_project/: requirements.txt
